# notion-task-runner

./: .gitignore  DESIGN_PATTERNS.md  LICENSE  Makefile  README.md  convert.py  json_to_env.py  pyproject.toml  static_table_update.py
.github/workflows/: notion-task-runner.yml
sample_html/: ymo642.html
src/notion_task_runner/: cli.py  constants.py  container.py  logger.py  logging.py  sum_calculator.py  task_interface.py  task_runner.py  utils.py
src/notion_task_runner/notion/: __init__.py  async_notion_client.py  notion_client.py  notion_database.py
src/notion_task_runner/tasks/: __init__.py  base_page_task.py  pas_page_task.py  prylarkiv_page_task.py  task_config.py
src/notion_task_runner/tasks/audiophile/: audiophile_page_task.py
src/notion_task_runner/tasks/backup/: export_file_watcher.py  google_credentials_provider.py  google_drive_client.py  google_drive_service_factory.py  google_drive_uploader.py  (+1 more)
src/notion_task_runner/utils/: __init__.py  general.py  http_client.py
tests/: conftest.py  test_async_notion_client.py  test_async_notion_client_original.py.bak  test_cli.py  test_cli_original.py.bak  test_final_coverage.py  test_helpers.py  test_integration.py  test_logger.py  test_notion_client.py  test_notion_database.py  test_pas_page_task.py  test_simple_coverage.py  test_sum_calculator.py  test_task.py  test_task_runner.py  test_task_runner_extended.py  test_utils.py
tests/fixtures/html/: car_scraper_fixture.html
tests/notion/: test_notion_client.py  test_notion_database.py
tests/tasks/: test_audiophile_page_task.py  test_pas_page_task.py  test_prylarkiv_page_task.py  test_task_config.py
tests/tasks/backup/: test_export_file_watcher.py  test_google_credentials_provider.py  test_google_drive_client.py  test_google_drive_service_factory.py  test_google_drive_upload_task.py  test_google_drive_uploader.py
tests/tasks/car/: test_car_scraper.py
tests/tasks/download_export/: test_export_file_downloader.py  test_export_file_poller.py  test_export_file_task.py  test_export_file_trigger.py
(+16 files in other folders)
